<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".LinearActivity1">
    <!-- TextView digunakan untuk menuliskan label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pertama"/>
    <!--EditText digunakan untuk Input Text prngguna-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/epesan"
        android:hint="@string/pesan"/>

    <!-- Button digunakan untuk tombol-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bpertama"
        android:text="@string/bpertama"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/bkedua"
        android:text="@string/bkedua"/>
    <!--Imagebutton digunakan untuk tombol yang berbasis gambar-->

    <ImageButton
        android:id="@+id/biKetiga"
        android:layout_width="146dp"
        android:layout_height="141dp"
        android:contentDescription=""
        android:src="@drawable/bangtan_boys" />

    <!--CheckBox digunakan untuk mendapatkan plihan pengguna yang lebih dari 1-->
    <ImageButton
        android:id="@+id/bikeempat"
        android:layout_width="148dp"
        android:layout_height="156dp"
        android:contentDescription=""
        android:src="@drawable/bt21" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb1"
        android:text="@string/cb1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb2"
        android:text="@string/cb2"/>

    <!--RadioGroup digunakan untuk mengelompokan RadioButton
    RadioButton digunakan untuk mendapatkan pilihan pengguna-->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/rg1"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:text="@string/jk1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:text="@string/jk2"/>
    </RadioGroup>
</LinearLayout>